# bazel-build-reactjs-project

./: .bazelignore  .bazelrc  .gitignore  README.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
react-demo/: BUILD.bazel  package.json  postcss.config.js  tailwind.config.js  webpack.bazel.config.js
react-demo/src/: index.jsx
react-demo/src/components/: Footer.jsx  Nav.jsx
react-demo/src/pages/: EmailValidation.jsx  ForgetPassword.jsx  SignIn.jsx  SignUp.jsx
ui/: BUILD.bazel  package.json  tailwind.config.js  webpack.bazel.config.js  webpack.config.js
ui/src/components/: Nav.jsx
ui/src/pages/: EmailValidation.jsx  ForgetPassword.jsx  Home.jsx  SignIn.jsx  SignUp.jsx
ui/src/routes/: Root.jsx
